--- a/coursecontract.html
+++ b/coursecontract.html
@@ -5,25 +5,29 @@
 <style>
 
 </style>
-<link rel = "stylesheet" type = "text/css" href = "" />
+<link rel = "stylesheet" type = "text/css" href = "	https://rileyrrrr.github.io/default.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title> Riley Rossello  Course Contract </title>
 </head>
 <body>
 <header>
-        <h1>Riley Rossello  </h1>
+        <h1>Riley Rossello - Web115-N801 </h1>
+	
+</header>
+<main class= "border">
+	<h2> Course Contract </h2>
+			<p> I, Riley Rossello agree to abide by the terms in my Fall 2021 WEB115-N801 Web Markup and Scripting with my instructor, D.I. von Briesen. </p>
+			
+			<p> I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+					 I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as an absences. </p>
+	    	<p> Signed: Riley R. Rossello, 22nd August 2021 </p>
 		
 		
+		 
 		
-		
-		
-		
-		
-		
-		
-		
-		
-		
+		</main>
+	
+		<footer class = "border">
 		
 		  <em>Designed by Riley Rr © 2021  </em> 
 	  <br/>
