--- a/coursecontract.html
+++ b/coursecontract.html
@@ -5,7 +5,7 @@
 <style>
 
 </style>
-<link rel = "stylesheet" type = "text/css" href = "styles/default.css" />
+<link rel = "stylesheet" type = "text/css" href = "	https://rileyrrrr.github.io/default.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title> Riley Rossello  Course Contract </title>
 </head>
@@ -32,11 +32,11 @@
 		  <em>Designed by Riley Rr © 2021  </em> 
 	  <br/>
 	  <br/>
-       <a href="http://validator.w3.org/check?uri=referer" style = "text-decoration: none">
+       <a href="https://validator.w3.org/check?uri=referer "style ="text-decoration: none">
           <img src="images/html%20button.png" alt="Validate HTML" />
        </a>
 
-			 <a href="http://jigsaw.w3.org/css-validator/check/referer" style = "text-decoration: none">
+			 <a href="https://jigsaw.w3.org/css-validator/check/referer" style = "text-decoration: none">
          <img src="images/CSS%20logo.gif" alt="Validate CSS" />
        </a>
 </footer>
