--- a/coursecontract.html
+++ b/coursecontract.html
@@ -32,11 +32,11 @@
 		  <em>Designed by Riley Rr © 2021  </em> 
 	  <br/>
 	  <br/>
-       <a href="https://validator.w3.org/check?uri=referer" style ="text-decoration: none">
+       <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frileyrrrr.github.io%2Fcoursecontract.html" style ="text-decoration: none">
           <img src="images/html%20button.png" alt="Validate HTML" />
        </a>
 
-			 <a href="https://jigsaw.w3.org/css-validator/check/referer" style = "text-decoration: none">
+			 <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Frileyrrrr.github.io%2Fcoursecontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" style = "text-decoration: none">
          <img src="images/CSS%20logo.gif" alt="Validate CSS" />
        </a>
 </footer>
