--- a/coursecontract.html
+++ b/coursecontract.html
@@ -5,7 +5,7 @@
 <style>
 
 </style>
-<link rel = "stylesheet" type = "text/css" href = "	https://rileyrrrr.github.io/default.css" />
+<link rel = "stylesheet" type = "text/css" href = "styles/default.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title> Riley Rossello  Course Contract </title>
 </head>
@@ -26,9 +26,18 @@
 		 
 		
 		</main>
-	
+	</br>
 		<footer class = "border">
-		
+		<a href="https://github.com/rileyrrrr"> Github | </a>
+		 <a href="https://github.com/rileyrrrr/rileyrrrr.github.io">Github Pages  | </a>
+	   <a href="https://www.codecademy.com/profiles/Rileyrrrr">Code Academy  |</a> 
+	   <a href="https://www.freecodecamp.org/rileyrrr" >Free Code Camp  |</a>
+	   <a href="https://www.linkedin.com/in/riley-rossello-0a3a7b1b4/">Linkedin  |</a>
+	   <a href="https://jsfiddle.net/user/Rileyrrrr/fiddles/" >JsFiddle  |</a>
+	   <a href="https://courses.edx.org/login?next=https%3A%2F%2Fprofile.edx.org%2Fu%2Frileyrrrr"> Edx  |</a>
+	    <a href="http://students.cpcc.edu/~rrossel0/">WebPage </a>
+		</br>
+		</br>
 		  <em>Designed by Riley Rr © 2021  </em> 
 	  <br/>
 	  <br/>
@@ -36,7 +45,7 @@
           <img src="images/html%20button.png" alt="Validate HTML" />
        </a>
 
-			 <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Frileyrrrr.github.io%2Fcoursecontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" style = "text-decoration: none">
+			 <a href="https://jigsaw.w3.org/css-validator/check/referer" style = "text-decoration: none">
          <img src="images/CSS%20logo.gif" alt="Validate CSS" />
        </a>
 </footer>
