--- a/coursecontract.html
+++ b/coursecontract.html
@@ -5,7 +5,7 @@
 <style>
 
 </style>
-<link rel = "stylesheet" type = "text/css" href = "styles/default.css" />
+<link rel = "stylesheet" type = "text/css" href = "https://rileyrrrr.github.io/default.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title> Riley Rossello  Course Contract </title>
 </head>
