--- a/coursecontract.html
+++ b/coursecontract.html
@@ -5,7 +5,7 @@
 <style>
 
 </style>
-<link rel = "stylesheet" type = "text/css" href = "https://rileyrrrr.github.io/default.css" />
+<link rel = "stylesheet" type = "text/css" href = "rileyrrrr.github.io/default.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title> Riley Rossello  Course Contract </title>
 </head>
@@ -26,7 +26,7 @@
 		 
 		
 		</main>
-	</br>
+	<br/>
 		<footer class = "border">
 		<a href="https://github.com/rileyrrrr"> Github | </a>
 		 <a href="https://github.com/rileyrrrr/rileyrrrr.github.io">Github Pages  | </a>
@@ -36,8 +36,8 @@
 	   <a href="https://jsfiddle.net/user/Rileyrrrr/fiddles/" >JsFiddle  |</a>
 	   <a href="https://courses.edx.org/login?next=https%3A%2F%2Fprofile.edx.org%2Fu%2Frileyrrrr"> Edx  |</a>
 	    <a href="http://students.cpcc.edu/~rrossel0/">WebPage </a>
-		</br>
-		</br>
+		<br/>
+		<br/>
 		  <em>Designed by Riley Rr © 2021  </em> 
 	  <br/>
 	  <br/>
