--- a/Introduction.html
+++ b/Introduction.html
@@ -30,18 +30,25 @@
 		
 		<li><strong>Background in this Subject: </strong> I have had a little experience with building websites back in high school but never took it too seriously until I started taking classes at CPCC. This will be my third class about
 		web technology and second class focused on just web development as I previously took Web 110. </li>
+		</ul>
 		
-		<li><strong>Courses that I am taking </strong></li>
+		<ul>
+		<li><strong>Courses that I am taking: </strong></li>
 		<ol>
 			<li><strong>WEB115 - Web Markup and Scripting: </strong> To learn more about HTML CSS, and get an understadning of Java Script. </li>
 			<li><strong>CIS115 - Intro to Programming and Logic: </strong> Its needed for my degree and get an idea of python, C++, and Java. </li>
 			<li><strong>CSC154 - Software Development:</strong> Required for my degree not much else to say.</li>
 			<li><strong>DBA 110 - Database Concepts:</strong> I don't think this is needed for my degree but I've never done anything with databases so I didn't want to just jump into DBA120 without at least knowing the basics.</li>
-			
+			</ol>
+			</ul>
+			<ul>
 			<li><strong>Funny or interesting thing about yourself:</strong> I own 2 Siamese cats and they are very clingy and sit on my lap when I do work and stand on my keyboard sometimes when I'm away. </li> 
+		</ul>
 		
-			</main>
-	<br/>
+
+	
+		</main>
+		<br/>
 		<footer class = "border">
 		<a href="https://github.com/rileyrrrr"> Github | </a>
 		 <a href="https://github.com/rileyrrrr/rileyrrrr.github.io">Github Pages  | </a>
