--- a/Introduction.html
+++ b/Introduction.html
@@ -34,18 +34,20 @@
 		
 		<ul>
 		
-		<li><strong>Courses that I am taking: </strong></li>
+		<li><strong>Courses that I am taking: </strong>
 	
 		<ul>
-			<li><strong>WEB115 - Web Markup and Scripting: </strong> To learn more about HTML CSS, and get an understadning of Java Script. </li>
-			<li><strong>CIS115 - Intro to Programming and Logic: </strong> Its needed for my degree and get an idea of python, C++, and Java. </li>
-			<li><strong>CSC154 - Software Development:</strong> Required for my degree not much else to say.</li>
-			<li><strong>DBA 110 - Database Concepts:</strong> I don't think this is needed for my degree but I've never done anything with databases so I didn't want to just jump into DBA120 without at least knowing the basics.</li>
-			</ul>
-			</ul>
-			<ul>
-			<li><strong>Funny or interesting thing about yourself:</strong> I own 2 Siamese cats and they are very clingy and sit on my lap when I do work and stand on my keyboard sometimes when I'm away. </li> 
+			<li><strong>WEB115 - Web Markup and Scripting: </strong> To learn more about HTML CSS, and get an understadning of Java Script. 
+			<li><strong>CIS115 - Intro to Programming and Logic: </strong> Its needed for my degree and get an idea of python, C++, and Java. 
+			<li><strong>CSC154 - Software Development:</strong> Required for my degree not much else to say.
+			<li><strong>DBA 110 - Database Concepts:</strong> I don't think this is needed for my degree but I've never done anything with databases so I didn't want to just jump into DBA120 without at least knowing the basics.
+			
+				</ul>
+		</li>
 		</ul>
+			<ul>
+			<li><strong>Funny or interesting thing about yourself:</strong> I own 2 Siamese cats and they are very clingy and sit on my lap when I do work and stand on my keyboard sometimes when I'm away. </li>
+	</ul>
 		
 
 	
@@ -65,7 +67,7 @@
 		  <em>Designed by Riley Rr © 2021  </em> 
 	  <br/>
 	  <br/>
-       <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frileyrrrr.github.io%2Fcoursecontract.html" style ="text-decoration: none">
+       <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frileyrrrr.github.io%2FIntroduction.html" style ="text-decoration: none">
           <img src="images/html%20button.png" alt="Validate HTML" />
        </a>
 
