--- a/introduction.html
+++ b/introduction.html
@@ -67,7 +67,7 @@
 		  <em>Designed by Riley Rr © 2021  </em> 
 	  <br/>
 	  <br/>
-       <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frileyrrrr.github.io%2FIntroduction.html" style ="text-decoration: none">
+       <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frileyrrrr.github.io%2Fintroduction.html" style ="text-decoration: none">
           <img src="images/html%20button.png" alt="Validate HTML" />
        </a>
 
