--- a/coursecontract.html
+++ b/coursecontract.html
@@ -7,18 +7,18 @@
 </style>
 <link rel = "stylesheet" type = "text/css" href = "styles/default.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title> Riley Rossello  Course Contract </title>
+    <title> Riley Rossello - Course Contract - WEB115 </title>
 </head>
 <body>
-<header>
-        <h1>Riley Rossello - Web115-N801 </h1>
+<header class= "border2">
+        <h1>Riley Rossello - WEB115 </h1>
 	
 </header>
 <main class= "border">
 	<h2> Course Contract </h2>
-			<p> I, <a href ="introduction.html"> Riley Rossello</a> agree to abide by the terms in my Fall 2021 WEB115-N801 Web Markup and Scripting with my instructor, D.I. von Briesen. </p>
+		<p> I, <a href ="introduction.html"> Riley Rossello</a> agree to abide by the terms in my Fall 2021 WEB115-N801 Web Markup and Scripting with my instructor, D.I. von Briesen. </p>
 			
-			<p> I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+		<p> I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
 					 I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as an absences. </p>
 	    	<p> Signed: Riley R. Rossello, 22nd August 2021 </p>
 		
